--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ DB_USERNAME=root
 DB_NAME=bazma_express
 DB_PASSWORD=
 DB_HOSTNAME=localhost
+DB_DIALECT = mysql
 
 JWT_SECRET_KEY=smktibazma1992
 JWT_EXPIRES_IN=7d
